--- a/Documents/auxiliars_doc.ipynb
+++ b/Documents/auxiliars_doc.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "source": [
     "### 1. Characteristic\n",
-    "\n"
+    "Clase donde se representan las características, esta contiene **nombre**, **valor**, **límites**, **mutabilidad** y función de distribución. Además contiene el método para modificarlos\n"
    ]
   },
   {
@@ -37,14 +37,19 @@
    "source": [
     "import os\n",
     "from sys import path\n",
-    "path.append(os.path.abspath(os.path.join('',os.pardir)))"
+    "path.append(os.path.abspath(os.path.join('',os.pardir)))\n",
+    "\n",
+    "char = Characteristic(\"precipitacionnes\", 12, 0, 10000, 2, lambda x: x*x)\n",
+    "char.Update_Characteristic_Value(-1)\n",
+    "char.value"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2. Dependence"
+    "### 2. Dependence\n",
+    "clase con la que ses representada una dependencia, influencia o interdependencia. Esta tiene la posición, entidad y características que se relacionan, además de c que sería la razón con que se relacionan y las funciones de suma y multiplicación de la dependencia."
    ]
   },
   {
@@ -63,35 +68,30 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "dep = Dependence([0,0], \"\",\"altura\",[0,0],\"atleta_no_boliviano\",\"rendimiento\",-2)"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### 3. Operators\n",
-    "\n"
+    "En este archivo guardamos todos los métodos complementarios que usamos a lo largo del proyecto, ejemplo:\n",
+    "* **default_sum**\n",
+    "* **default_mul**\n",
+    "* **dependence**\n",
+    "* **influence**\n",
+    "* **distribution_default**\n",
+    "\n",
+    "Además de varias distribuciones que puede usar el usuario:\n",
+    "* **uniform**\n",
+    "* **exponential**\n",
+    "* **gamma**\n",
+    "* **normal**\n",
+    "* **binomial**\n",
+    "* **geométrica**\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[['temperature', 'fertility', -0.1],\n",
-       " ['actual_resources', 'actual_resources', 0.05],\n",
-       " ['fertility', 'actual_resources', 5.5]]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
   }
  ],
  "metadata": {
