--- a/Documents/society_doc.ipynb
+++ b/Documents/society_doc.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "## Documentación de la clase Society\n",
     "\n",
-    "Con esta clase definimos nuestra \"sociedad\", esta consta de **características**."
+    "\n",
+    "Con esta clase definimos nuestra \"sociedad\", esta consta de un **nombre**, **características**, **especie**, **posición** en el terreno, y una instancia de **evolución**, además una variable para habilitar la misma.\n",
+    "Evolution se explica en otro informe detalladamente."
    ]
   },
   {
@@ -35,7 +37,7 @@
     "humanidad = Species(\"humanidad\")\n",
     "society = Society(\"cubano\", humanidad)\n",
     "\n",
-    "society.characteristic"
+    "(society.characteristic, society.species, society.evolution, society.pos)"
    ]
   },
   {
@@ -43,26 +45,34 @@
    "metadata": {},
    "source": [
     "### Características\n",
-    "Un terreno posee una lista de **características** propias como pueden ser recursos actuales, capacidad, fertilidad, temperatura, altura, etc. "
+    "Una sociedad posee una lista de **características** propias como pueden ser *población*(por defecto para todas las sociedades y especies), *economía*, *política*, *natalidad*, etc. \n",
+    "\n",
+    "Para trabajar con las mismas se tiene los métodos:\n",
+    "* **Get_Characteristic** : recibe el nombre de la característica y devuelve el valor de la misma\n",
+    "* **Change_Characteristic** : recibe todos los argumentos para crear una característica y la añade a la lista de características.\n",
+    "* **Delete_Characteristic** : recibe el nombre de la característica y la elimina de la lista de caracterísiticas.\n",
+    "* **Update_Characteristic_Value** : recibe nombre y nuevo valor, actualiza solo el valor de la características"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'actual_resources': 500, 'fertility': [25, 60], 'temperature': 25}"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
+   "outputs": [],
+   "source": [
+    "society.Change_Characteristic(\"politica\",1,0,10,3,lambda a: a*2)\n",
+    "society.Delete_Characteristic(\"politica\")\n",
+    "society.Change_Characteristic(\"politica\",1,0,10,3, None)\n",
+    "society.Update_Characteristic(\"politica\",2)\n",
+    "society.Get_Characteristic(\"politica\")"
+   ]
+  },
+  {
+   "source": [
+    "Además tiene un método **Copy** que devuelve una copia de la sociedad."
    ],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {}
   }
  ],
  "metadata": {
