--- a/Documents/species_doc.ipynb
+++ b/Documents/species_doc.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "## Documentación de la clase Species\n",
     "\n",
-    "Con esta clase definimos nuestra \"sociedad\", esta consta de **características**."
+    "Con esta clase definimos nuestra \"sociedad\", esta consta de un **nombre** y **características**."
    ]
   },
   {
@@ -33,8 +33,46 @@
     "\n",
     "humano = Species('Humano')\n",
     "\n",
-    "(humano.name, humano.characteristic, humano.characteristic_dependences)"
+    "(humano.name, humano.characteristic)"
    ]
+  },
+  {
+   "source": [
+    "### Características\n",
+    "\n",
+    "Las caracterísiticas en especies no son instancias de la clase Characterisitic, pues no es mas que los valores que se necesitan par isntanciar una a la vez que se cree una sociedad de esta especie.\n",
+    "\n",
+    "Para trabajas con las características se tienen los métodos:\n",
+    "* **Change_Characterisitic**: Toma todos los valores iniciales para crear una característica y los guarda en un diccionario.\n",
+    "* **Change_Characterisitic_Value**: Cambia el valor inicial de la característica.\n",
+    "* **Delete_Characcteristic**: Elimina la característica de la lista.\n",
+    "* **Get_Characteristic_Summation**: Obtiene la sumatioria de los valores de la característica en las sociedades que pertenecen a la especie.\n",
+    "* **Get_Characteristic_Mean**: Obtiene la media de los valores de la característica en las sociedades que pertenecen a la especie."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "humano.Change_Characterisitic(\"Tamaño\", 1,0,2,0)\n",
+    "\n",
+    "cubano = Society(\"cubano\", humano)\n",
+    "taino = Society(\"taino\", humano)\n",
+    "humano.Get_Characteristic_Summation(\"Tamaño\") == 2\n",
+    "humano.Get_Characteristic_Mean(\"Tamaño\") == 1\n",
+    "(humano.Get_Characteristic_Summation(\"Poblacion\") == 20, humano.Get_Characteristic_Mean(\"Poblacion\") == 10 )"
+   ]
+  },
+  {
+   "source": [
+    "Además tiene un mètodo Copy que devuelve una copia de la instancia"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   }
  ],
  "metadata": {
