--- a/Documents/auxiliars_doc.ipynb
+++ b/Documents/auxiliars_doc.ipynb
@@ -20,16 +20,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "({}, [])"
+       "0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -38,6 +38,9 @@
     "import os\n",
     "from sys import path\n",
     "path.append(os.path.abspath(os.path.join('',os.pardir)))\n",
+    "from Simulation.characteristic import Characteristic\n",
+    "from Simulation.dependence import Dependence\n",
+    "from Simulation.operators import *\n",
     "\n",
     "char = Characteristic(\"precipitacionnes\", 12, 0, 10000, 2, lambda x: x*x)\n",
     "char.Update_Characteristic_Value(-1)\n",
@@ -54,20 +57,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'actual_resources': 500, 'fertility': [25, 60], 'temperature': 25}"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "dep = Dependence([0,0], \"\",\"altura\",[0,0],\"atleta_no_boliviano\",\"rendimiento\",-2)"
    ]
