--- a/Documents/compilacion.ipynb
+++ b/Documents/compilacion.ipynb
@@ -698,7 +698,7 @@
    "source": [
     "## Análisis semántico\n",
     "\n",
-    "En esta parte se verificarán los posibles errores semánticos que pueda tener el lenguaje, esto se realiza a través de type_collector, type_builder y type_checker. Los recorridos semánticos por el AST se realizan utilizando el visitor que se encuentra en la carpeta cmp, con este como decorador en los métodos visit que tenemos por cada nodo se van visitando todos los nodos del árbol. Cuando se encuentra un error semántico lo devolvemos y paramos la ejecución."
+    "En esta parte se verificarán los posibles errores semánticos que pueda tener el lenguaje, esto se realiza a través de type_collector, type_builder y type_checker. Los recorridos semánticos por el AST se realizan utilizando el visitor que se encuentra en la carpeta cmp, con este como decorador en los métodos visit que tenemos por cada nodo se van visitando todos los nodos del árbol. Cuando se encuentra un error semántico lo devolvemos y paramos de compilar."
    ]
   },
   {
