--- a/Documents/runner_doc.ipynb
+++ b/Documents/runner_doc.ipynb
@@ -4,19 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Documentación del runner\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "from sys import path\n",
-    "path.append(os.path.abspath(os.path.join('',os.pardir)))\n",
-    "from Compilacion.grammar import build_grammar\n"
+    "## Runner\n",
+    "\n",
+    "El runner es un paso intermedio entre el simulation que se encuentra visible en el lenguaje definido para el usuario, y el Simulation que trabaja por detrás de eso con los datos. Básicamente podemos apreciar todas las funciones que son recogidas en el type_checker, y que son recibidas con sus parámetros, analizados para evitar errores innecesarios y aletar al usuario de esto (errores que son por norma general en tiempo de ejecución), y luego modificar las entradas y preparar estos datos para mandárselos a Simulation y que ahí sean debidamente procesados, puesto que la información que es enviada a Simulation es siempre una copia de la información que el usuario utiliza en el lenguaje, debido al manejo de referencias de Python\n",
+    "\n",
+    "La idea de esto es que sea utilizado en el main para cargar dinámicamente el código Python transpilado, y que haya una existencia de las funciones del lenguaje a la hora de ser invocadas."
    ]
   }
  ],
