--- a/Documents/simulation_doc.ipynb
+++ b/Documents/simulation_doc.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -19,13 +19,13 @@
       "text/plain": [
        "({},\n",
        " [],\n",
-       " [[<Simulation.land.Land at 0x2670919f8b0>,\n",
-       "   <Simulation.land.Land at 0x2670f53ef20>],\n",
-       "  [<Simulation.land.Land at 0x2670f53eec0>,\n",
-       "   <Simulation.land.Land at 0x2670f53fc10>]])"
+       " [[<Simulation.land.Land at 0x18cac8cb7f0>,\n",
+       "   <Simulation.land.Land at 0x18cac6389d0>],\n",
+       "  [<Simulation.land.Land at 0x18cac638d90>,\n",
+       "   <Simulation.land.Land at 0x18cac638df0>]])"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,13 +60,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sim.Add_Species('Humano')\n",
-    "sim.Add_Species('Marciano')\n",
-    "sim.Delete_Species('Marciano')"
+    "simulacion.Add_Species('Humano')\n",
+    "simulacion.Add_Species('Marciano')\n",
+    "simulacion.Delete_Species('Marciano')"
    ]
   },
   {
@@ -102,26 +102,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[['temperature', 'fertility', -0.1],\n",
-       " ['actual_resources', 'actual_resources', 0.05],\n",
-       " ['fertility', 'actual_resources', 5.5]]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "simulation.Add_Society(0,0,\"habanero\",\"Humano\")\n",
-    "simulation.Add_Society(1,0,\"pinareño\",\"Humano\")\n",
-    "simulation.Add_Inter_Dependence([0,0],\"habanero\",\"Poblacion\",[1,0],\"pinareño\",\"Poblacion\",10)"
+    "simulacion.Add_Society(0,0,\"habanero\",\"Humano\")\n",
+    "simulacion.Add_Society(1,0,\"pinareño\",\"Humano\")\n",
+    "simulacion.Add_Inter_Dependence([0,0],\"habanero\",\"Poblacion\",[1,0],\"pinareño\",\"Poblacion\",10)"
    ]
   },
   {
@@ -137,44 +124,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'actual_resources': 500, 'fertility': [25, 60], 'temperature': 25},\n",
-       " {'actual_resources': 844.0, 'fertility': [22.5, 57.5], 'temperature': 25},\n",
-       " {'actual_resources': 1172.2, 'fertility': [20.0, 55.0], 'temperature': 25},\n",
-       " {'actual_resources': 1368.31, 'fertility': [17.5, 52.5], 'temperature': 25},\n",
-       " {'actual_resources': 1552.2255, 'fertility': [15.0, 50.0], 'temperature': 25},\n",
-       " {'actual_resources': 1723.336775,\n",
-       "  'fertility': [12.5, 47.5],\n",
-       "  'temperature': 25},\n",
-       " {'actual_resources': 1875.50361375,\n",
-       "  'fertility': [10.0, 45.0],\n",
-       "  'temperature': 25},\n",
-       " {'actual_resources': 2035.2787944375002,\n",
-       "  'fertility': [7.5, 42.5],\n",
-       "  'temperature': 25},\n",
-       " {'actual_resources': 2269.0427341593754,\n",
-       "  'fertility': [5.0, 40.0],\n",
-       "  'temperature': 25},\n",
-       " {'actual_resources': 2464.994870867344,\n",
-       "  'fertility': [2.5, 37.5],\n",
-       "  'temperature': 25},\n",
-       " {'actual_resources': 2626.744614410711,\n",
-       "  'fertility': [0.0, 35.0],\n",
-       "  'temperature': 25}]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "simulation.Move_One_Day_All()"
+    "simulacion.Move_One_Day_All()"
    ]
   }
  ],
