--- a/Documents/society_doc.ipynb
+++ b/Documents/society_doc.ipynb
@@ -19,7 +19,10 @@
     {
      "data": {
       "text/plain": [
-       "{'Población': <Simulation.characteristic.Characteristic at 0x245ea9df670>}"
+       "({'Poblacion': <Simulation.characteristic.Characteristic at 0x174707e9930>},\n",
+       " <Simulation.species.Species at 0x1746fd27cd0>,\n",
+       " <Simulation.evolution.Evolution at 0x174707e9960>,\n",
+       " None)"
       ]
      },
      "execution_count": 1,
@@ -48,7 +51,7 @@
     "Una sociedad posee una lista de **características** propias como pueden ser *población*(por defecto para todas las sociedades y especies), *economía*, *política*, *natalidad*, etc. \n",
     "\n",
     "Para trabajar con las mismas se tiene los métodos:\n",
-    "* **Get_Characteristic** : recibe el nombre de la característica y devuelve el valor de la misma\n",
+    "* **Get_Characteristic_Value** : recibe el nombre de la característica y devuelve el valor de la misma\n",
     "* **Change_Characteristic** : recibe todos los argumentos para crear una característica y la añade a la lista de características.\n",
     "* **Delete_Characteristic** : recibe el nombre de la característica y la elimina de la lista de caracterísiticas.\n",
     "* **Update_Characteristic_Value** : recibe nombre y nuevo valor, actualiza solo el valor de la características"
@@ -56,23 +59,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "society.Change_Characteristic(\"politica\",1,0,10,3,lambda a: a*2)\n",
     "society.Delete_Characteristic(\"politica\")\n",
     "society.Change_Characteristic(\"politica\",1,0,10,3, None)\n",
-    "society.Update_Characteristic(\"politica\",2)\n",
-    "society.Get_Characteristic(\"politica\")"
+    "society.Update_Characteristic_Value(\"politica\",2)\n",
+    "society.Get_Characteristic_Value(\"politica\")"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Además tiene un método **Copy** que devuelve una copia de la sociedad."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   }
  ],
  "metadata": {
