--- a/Documents/species_doc.ipynb
+++ b/Documents/species_doc.ipynb
@@ -17,7 +17,14 @@
     {
      "data": {
       "text/plain": [
-       "('Humano', {'population': 1}, [])"
+       "('Humano',\n",
+       " {'Poblacion': {'summation': 0,\n",
+       "   'mean': 0,\n",
+       "   'initial': 10,\n",
+       "   'lower': 0,\n",
+       "   'upper': inf,\n",
+       "   'mutability': -1,\n",
+       "   'distr_function': None}})"
       ]
      },
      "execution_count": 1,
@@ -29,7 +36,8 @@
     "import os\n",
     "from sys import path\n",
     "path.append(os.path.abspath(os.path.join('',os.pardir)))\n",
-    "from species import Species\n",
+    "from Simulation.species import Species\n",
+    "from Simulation.society import Society\n",
     "\n",
     "humano = Species('Humano')\n",
     "\n",
@@ -37,6 +45,8 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Características\n",
     "\n",
@@ -48,17 +58,26 @@
     "* **Delete_Characcteristic**: Elimina la característica de la lista.\n",
     "* **Get_Characteristic_Summation**: Obtiene la sumatioria de los valores de la característica en las sociedades que pertenecen a la especie.\n",
     "* **Get_Characteristic_Mean**: Obtiene la media de los valores de la característica en las sociedades que pertenecen a la especie."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(True, True)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "humano.Change_Characterisitic(\"Tamaño\", 1,0,2,0)\n",
+    "humano.Change_Characteristic(\"Tamaño\", 1,0,2,0)\n",
     "\n",
     "cubano = Society(\"cubano\", humano)\n",
     "taino = Society(\"taino\", humano)\n",
@@ -68,11 +87,11 @@
    ]
   },
   {
-   "source": [
-    "Además tiene un mètodo Copy que devuelve una copia de la instancia"
-   ],
    "cell_type": "markdown",
-   "metadata": {}
+   "metadata": {},
+   "source": [
+    "Además tiene un método Copy que devuelve una copia de la instancia"
+   ]
   }
  ],
  "metadata": {
@@ -94,7 +113,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.10.0"
   },
   "orig_nbformat": 4
  },
